# add_executable(EventLoop_test EventLoop_test.cc ${KANON_SRC})
# add_executable(EventLoop_test2 EventLoop_test2.cc ${KANON_SRC})
#add_executable(EventLoop_test3 EventLoop_test3.cc ${KANON_SRC})
add_executable(timer_test1 timer_test1.cc ${KANON_SRC})
add_executable(Acceptor_test Acceptor_test.cc ${KANON_SRC})
